--- a/api-gateway/src/main/resources/static/profile.html
+++ b/api-gateway/src/main/resources/static/profile.html
@@ -231,7 +231,7 @@
             
             <nav class="nav-links">
                 <a href="home.html" class="nav-link active">Accueil</a>
-                <a href=home.html#Fonctionnalités" class="nav-link">Fonctionnalités</a>
+                <a href="home.html#Fonctionnalités" class="nav-link">Fonctionnalités</a>
                  <a href="livreDisponible.html" class="nav-link" >livres Disponibles</a>
                   <a href="home.html#contact" class="nav-link" >Contact</a>
             </nav>
