--- a/api-gateway/src/main/resources/static/home.html
+++ b/api-gateway/src/main/resources/static/home.html
@@ -522,6 +522,8 @@
             <div class="auth-buttons">
                 <a href="auth.html" class="btn btn-outline">Connexion</a>
                 <a href="auth.html" class="btn btn-primary">S'inscrire</a>
+                <button id="logoutBtn" class="btn btn-outline">Déconnexion</button>
+
             </div>
             
             <button class="mobile-menu-btn">☰</button>
@@ -764,6 +766,25 @@
         mobileMenuBtn.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         }); 
+
+        // Logout button functionality
+        document.getElementById("logoutBtn").addEventListener("click", async function () {
+    try {
+        const response = await fetch("http://localhost:8081/auth/logout", {
+            method: "POST",
+            credentials: "include" // important pour envoyer les cookies de session
+        });
+
+        if (response.ok) {
+            alert("Déconnecté !");
+            window.location.href = "home.html"; // ou page d'accueil
+        } else {
+            alert("Erreur de déconnexion");
+        }
+    } catch (err) {
+        alert("Erreur réseau : " + err.message);
+    }
+});
     </script>
 </body>
 </html>
