change 10 (il reste seulement back-end de profile)

--- a/api-gateway/src/main/resources/static/auth.html
+++ b/api-gateway/src/main/resources/static/auth.html
@@ -243,7 +243,7 @@
                 
                 <div class="form-container" id="register-form">
                     <form>
-                        <div class="form-group">
+                        <div class="form-group" id="register">
                             <label for="register-name">Nom complet</label>
                             <input type="text" id="register-name" placeholder="Entrez votre nom complet" required>
                         </div>
