--- a/api-gateway/src/main/resources/static/home.html
+++ b/api-gateway/src/main/resources/static/home.html
@@ -517,12 +517,13 @@
                 <a href="#Fonctionnalités" class="nav-link">Fonctionnalités</a>
                  <a href="livreDisponible.html" class="nav-link" >livres Disponibles</a>
                   <a href="#contact" class="nav-link" >Contact</a>
+                  <a href="profile.html" class="nav-link" id="profileLink" style="display: none;">Profil</a>
             </nav>
             
             <div class="auth-buttons">
-                <a href="auth.html" class="btn btn-outline">Connexion</a>
-                <a href="auth.html" class="btn btn-primary">S'inscrire</a>
-                <button id="logoutBtn" class="btn btn-outline">Déconnexion</button>
+                <a href="auth.html" class="btn btn-outline" id="loginBtn">Connexion</a>
+                <a href="auth.html#register" class="btn btn-primary" id="registerBtn">S'inscrire</a>
+                <button class="btn btn-outline" id="logoutBtn" >Déconnexion</button>
 
             </div>
             
@@ -767,6 +768,34 @@
             navLinks.classList.toggle('active');
         }); 
 
+
+        // Check session on page load
+        window.addEventListener('DOMContentLoaded', async () => {
+    try {
+        const response = await fetch("http://localhost:8081/auth/check-session", {
+            credentials: "include"
+        });
+
+        if (response.ok) {
+            document.getElementById('logoutBtn').style.display = 'inline-block';
+            document.getElementById('loginBtn').style.display = 'none';
+            document.getElementById('registerBtn').style.display = 'none';
+             document.getElementById('profileLink').style.display = 'inline-block';
+        } else {
+            document.getElementById('logoutBtn').style.display = 'none';
+             document.getElementById('loginBtn').style.display = 'inline-block';
+            document.getElementById('registerBtn').style.display = 'inline-block';
+             document.getElementById('profileLink').style.display = 'none';
+        }
+    } catch (err) {
+        console.error("Erreur lors de la vérification de session", err);
+        document.getElementById('logoutBtn').style.display = 'none';
+         document.getElementById('loginBtn').style.display = 'inline-block';
+        document.getElementById('registerBtn').style.display = 'inline-block';
+        document.getElementById('profileLink').style.display = 'none';
+    }
+});
+
         // Logout button functionality
         document.getElementById("logoutBtn").addEventListener("click", async function () {
     try {
@@ -785,6 +814,8 @@
         alert("Erreur réseau : " + err.message);
     }
 });
+
+
     </script>
 </body>
 </html>
